compiling_error.txt
/Users/PaytonWhittaker/Desktop/Programming/Whittaker_HW17.cpp:125:1: error: invalid argument type 'std::__1::ostream' (aka 'basic_ostream<char>') to unary expression
-
^
1 error generated.
